--- a/src/screens/Homescreen/styles.module.scss
+++ b/src/screens/Homescreen/styles.module.scss
@@ -16,7 +16,9 @@
     justify-content: space-between;
     padding: 1rem;
     padding-right: 2rem;
-
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
     @media only screen and (max-width: 700px) {
       padding-right: 1rem;
     }
